[package]
name = "flem_serial_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2"

[dev-dependencies]
once_cell = "1.17.1"

[dependencies.flem]
git = "https://github.com/amcelroy/flem-rs.git"