[package]
name = "flem-serial-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serialport]
#serialport = "4.2"
git = "https://github.com/metta-systems/serialport-rs"
branch = "macos-ENOTTY-fix"

[dependencies.flem]
git = "https://github.com/BridgeSource/flem-rs.git"
